- Fix crash in wxAuiToolBar::GetToolBarFits().
- Make wxFILTER_INCLUDE_LIST in wxTextValidator actually usable.
- Make wxHTML more efficient when displaying large tables (Kinaou Hervé).
- Prevent wxGrid rows/columns from becoming too small on double click.
- Fix wxGraphicsBitmap::ConvertToImage() when using Cairo.
- Support loading ICO files with data in PNG format (Artur Wieczorek).

wxGTK:

- Fix mouse wheel scrolling in wxListCtrl broken just before 3.0.0.
- Fix memory leak in wxSocket.
- Fix raw access to wxBitmap pixels after drawing on it using wxMemoryDC.
- Fix setting font and colours of wxToggleButtons with images.
- Fix wxPopupTransientWindow mouse events with GTK3,
  also fixes wxOwnerDrawnComboBox, wxDatePickerCtrl.
- Fix cursor inheritance.
- Fix wxStaticBoxSizer size calculation.
- Fix AUI panel re-docking.
- Add support for wxDD_DIR_MUST_EXIST to wxDirDialog.
- Fix handling of the accelerators for sub menu items (Chaobin Zhang).
- Fix disappearing mouse clicks when using wxTreeCtrl.
- Fix calls to Move{Before,After}InTabOrder() after parent window creation.
- Fix wxDirPickerCtrl to send wxEVT_DIRPICKER_CHANGED when user selects a
  special folder from combobox

wxMSW:

- Disable the use of compiler TLS to avoid mysterious crashes in plugins.
- Added solution files for MSVS 2012 and 2013 (Artur Wieczorek).
- Fix handling of unsupported formats in dnd (jwiesemann).
- Fix blank wxBitmapComboBox dropdown appearance.
- Fix clicking on checkboxes in wxDataViewCtrl.
- Fix handling of Esc while an auto-complete drop down is open (Chaobin Zhang).
- Many improvements to alpha transparency handling (Artur Wieczorek).
- Make "%lu" work with size_t arguments under Win64 (laro).
- Fix wxRegion::Offset() with shared objects (Joost Nieuwenhuijse).
- Fix wxSocket::Initialize() after Shutdown() (Laurent Poujoulat).
- Fix coordinates of EVT_MOUSEWHEEL in frames with toolbars (LtJax).
- Support "show" verb as well as "open" in wxFileType (Eric Jensen).